build_error.log
    Checking zzzXBDJBansBackend v0.1.0 (/root/zzzXBDJBans/zzzXBDJBansBackend)
error[E0277]: the trait bound `BulkBanCheckRequest: ToSchema` is not satisfied
   --> src/handlers/ban.rs:299:20
    |
299 |     request_body = BulkBanCheckRequest,
    |                    ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `ToSchema` is not implemented for `BulkBanCheckRequest`
   --> src/handlers/ban.rs:292:1
    |
292 | pub struct BulkBanCheckRequest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `ToSchema`:
              &'t [T]
              &'t mut [T]
              &str
              ()
              Admin
              ApplyWhitelistRequest
              AuditLog
              BTreeMap<K, T>
            and 57 others

error[E0277]: the trait bound `BulkBanCheckRequest: PartialSchema` is not satisfied
   --> src/handlers/ban.rs:299:20
    |
299 |     request_body = BulkBanCheckRequest,
    |                    ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `ComposeSchema` is not implemented for `BulkBanCheckRequest`
   --> src/handlers/ban.rs:292:1
    |
292 | pub struct BulkBanCheckRequest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `ComposeSchema`:
              &[T]
              &mut [T]
              &str
              Admin
              ApplyWhitelistRequest
              AuditLog
              BTreeMap<K, T>
              BTreeSet<K>
            and 56 others
    = note: required for `BulkBanCheckRequest` to implement `PartialSchema`
note: required by a bound in `utoipa::ToSchema::name`
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/utoipa-5.4.0/src/lib.rs:374:21
    |
374 | pub trait ToSchema: PartialSchema {
    |                     ^^^^^^^^^^^^^ required by this bound in `ToSchema::name`
...
405 |     fn name() -> Cow<'static, str> {
    |        ---- required by a bound in this associated function

warning: unused variable: `db_name`
 --> src/db.rs:9:9
  |
9 |     let db_name = database_url.split('/').last().expect("Invalid DB URL format");
  |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_db_name`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `server_url`
  --> src/db.rs:10:9
   |
10 |     let server_url = database_url.get(..database_url.rfind('/').unwrap_or(database_url.len())).un...
   |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_server_url`

warning: unused variable: `string_len`
   --> src/utils/rcon.rs:215:22
    |
215 | ...let string_len = size - 8 - 1; // Exclude last null. (Body + Null) means Size covers Body+1+1...
    |        ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_string_len`

warning: unused variable: `parts`
   --> src/handlers/server.rs:479:26
    |
479 |                      let parts: Vec<&str> = line.split_whitespace().collect();
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_parts`

warning: unused variable: `date_str`
  --> src/utils/mod.rs:36:13
   |
36 |         let date_str = &duration_str[6..];
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_date_str`

For more information about this error, try `rustc --explain E0277`.
warning: `zzzXBDJBansBackend` (bin "zzzXBDJBansBackend") generated 5 warnings
error: could not compile `zzzXBDJBansBackend` (bin "zzzXBDJBansBackend") due to 4 previous errors; 5 warnings emitted
